syntax = "proto3";
package pb;

option go_package = ".;pb";

import "google/protobuf/empty.proto";

service Wallet {
  rpc AccountGet (google.protobuf.Empty) returns (Account);
  rpc NewPayout (PayoutReq) returns (PayoutRes) {}
}

message Account {
  uint64 amount = 1;
}
message PayoutReq{
  uint64 amount = 1;
  string address = 2;
}
message PayoutRes{
  string transactionHash = 1;
}